# cli-dashboard

./: .gitignore  README.md  dashboard.py  main.py  pyproject.toml
dashboard/: main.py
dashboard/layout/: body.py  footer.py  left.py  mid.py  right.py
dashboard/panels/: ascii.py  calendar.py  currently.py  goals.py  picca.py  todo.py  upcoming.py
data/: currently.example.json  events.example.json  goals.example.json  todo.example.json
layout/: body.py  footer.py  header.py  left.py  mid.py  right.py
panels/: ascii_2.py  currently.py  picca.py  time.py  todo.py  upcoming.py
