[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard"
version = "0.1.0"
description = "A cli dashboard built with Rich"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich"
]

[tool.setuptools.packages.find]
include = ["dashboard*"]

[project.scripts]
dashboard = "dashboard.main:main"
